@@ -1,6 +1,7 @@
 X   X
     * Add auto-detecting entity IDs
     * Add option to block spawn eggs per-creature (enableSpawnEggOverrideAllowSpawn)
+    * Add option to enable/disable mobs from appearing in SilkSpawners (enable)
     * Fix spawning stacks of spawn eggs with spawnEggOverride
     * Remove legacy IDs
     * Remove entity IDs and useExtraMobs from config (since now auto-detected)
